Added auth gard, swagger error handler, added logger,
