# server/models/Users.js
@@ -1,67 +1,63 @@
-let _ = require('lodash');
+let _ = require("lodash");
 const Sequelize = require("sequelize");
 const sequelize = require("../middlewares/dbconnect");
 
 const Account = sequelize.define(
   "account",
   {
-    createddate: {
-      type: Sequelize.DATE,
-			allowNull: true,
-			defaultValue: new Date()
-    },
-    isdeleted: {
-      type: Sequelize.BOOLEAN,
-      allowNull: true,
-    },
-    name: {
-			type: Sequelize.STRING,
-			allowNull: false,
-		},
-		systemmodstamp: {
-			type: Sequelize.DATE,
-      allowNull: true,
-		},
-    accountnumber: {
-			type: Sequelize.STRING,
-			allowNull: true,
-		},
-		accountsource: {
-			type: Sequelize.STRING,
-			allowNull: true,
-		},
-		billingcity: {
-			type: Sequelize.STRING,
-			allowNull: true,
-    },
-    sfid: {
-			type: Sequelize.STRING,
-			allowNull: true,
-		},
-		id: {
+    user_id: {
       type: Sequelize.INTEGER,
-			allowNull: false,
+      allowNull: false,
       primaryKey: true,
       autoIncrement: true
     },
-		_hc_lastop: {
-			type: Sequelize.STRING,
-			allowNull: true,
+    username: {
+      type: Sequelize.STRING,
+      allowNull: false
+    },
+    email: {
+      type: Sequelize.STRING,
+      allowNull: false
 		},
-		_hc_err: {
-			type: Sequelize.STRING,
-			allowNull: true,
-    }
+		password: {
+      type: Sequelize.STRING,
+      allowNull: false
+    },
+    password_salt: {
+      type: Sequelize.STRING,
+      allowNull: false
+    },
+    first_name: {
+      type: Sequelize.STRING,
+      allowNull: false
+    },
+    last_name: {
+      type: Sequelize.STRING,
+      allowNull: false
+    },
+    facebook_id: {
+      type: Sequelize.NUMBER,
+      allowNull: true
+    },
+    google_id: {
+      type: Sequelize.NUMBER,
+      allowNull: true
+    },
+    created_on: {
+      type: Sequelize.DATE,
+      allowNull: true,
+      defaultValue: new Date()
+    },
   },
   {
-    schema: "salesforce",
+    // schema: "salesforce",
     timestamps: false,
     freezeTableName: true,
   }
 );
 
-Account.prototype.formatResponse = function(dataObj) {
-  return _.omit(dataObj, [ 'sfid', '_hc_lastop', '_hc_err']);
+Account.prototype.formatResponse = function (dataObj) {
+  return _.omit(dataObj, ["password", "password_salt", "facebook_id", "google_id", "created_on"]);
 };
 
 module.exports = Account;
