# server/services/users.js
@@ -1,82 +1,84 @@
 let _ = require("lodash");
+let sha1 = require("sha1");
 let Promise = require("bluebird");
 
-let customError = require("../shared/custom-error");
+let CustomError = require("../lib/app_error");
 let AccountModal = require("../models/Users");
+
+let commonService = require("./common");
 
 const sequelize = require("../middlewares/dbconnect");
 
 module.exports = {
-  getUsersNoSql: getUsersNoSql,
-  getUsersSql: getUsersSql,
+  createUser: createUser,
+  getUsers: getUsers,
   getUser: getUser,
   updateUser: updateUser,
-  createUser: createUser,
 };
 
-// Sequelize with No SQL Queries
-function getUsersNoSql(cb) {
+function createUser(data, cb) {
+  let userObj = new AccountModal(data);
+  let salt = sha1(commonService.generateSalt());
+  userObj["username"] = userObj["email"];
+  userObj["password_salt"] = salt;
+  userObj["password"] = sha1(userObj["password"] + salt);
+  return AccountModal.findOne({ where: { email: userObj.email } }).then(
+    (user) => {
+      if (user) {
+        cb(
+          new CustomError({
+            custom_error: "conflict",
+            message: "Email address is already in use.",
+          })
+        );
+      } else {
+        return userObj.save().then((user) => {
+          cb(null, user.formatResponse(user.dataValues));
+        });
+      }
+    }
+  );
+}
+
+function getUsers(cb) {
   return AccountModal.findAll().then((dbUsers) => {
     if (!dbUsers) {
       cb(
-        new customError({
+        new CustomError({
           custom_error: "notFound",
           message: "Users not found.",
         })
       );
     } else if (dbUsers) {
       return AccountModal.count().then((totalCount) => {
-				let responses = {
-					users: _.map(dbUsers, (user) => user.formatResponse(user.dataValues)),
-					total: totalCount
-				};
-				cb(null, responses);
+        let responses = {
+          users: _.map(dbUsers, (user) => user.formatResponse(user.dataValues)),
+          total: totalCount,
+        };
+        cb(null, responses);
       });
     }
   });
-}
-
-// Sequelize with SQL Queries
-function getUsersSql(cb) {
-  return sequelize
-    .query("SELECT * FROM salesforce.account", {
-      type: sequelize.QueryTypes.SELECT,
-    })
-    .then((dbUsers) => {
-      if (!dbUsers) {
-        cb(
-          new customError({
-            custom_error: "notFound",
-            message: "Users not found.",
-          })
-        );
-      } else if (dbUsers) {
-        return AccountModal.count().then((totalCount) => {
-          let responses = {
-            users: dbUsers,
-            total: totalCount,
-          };
-          cb(null, responses);
-        });
-      }
-    });
+  // SQL Query
+  // return sequelize
+  //   .query("SELECT * FROM salesforce.account", {
+  //     type: sequelize.QueryTypes.SELECT,
+  //   })
+  //   .then((dbUsers) => {
+  //   })
 }
 
 function getUser(userId, cb) {
-  return AccountModal.findAll({ where: { id: userId } }).then((user) => {
+  return AccountModal.findOne({ where: { user_id: userId } }).then((user) => {
     if (!user) {
       cb(
-        new customError({
+        new CustomError({
           custom_error: "notFound",
           message: "User not found.",
         })
       );
     } else if (user) {
-      let userObj;
-      user.map((user) => {
-        userObj = user;
-      });
-      cb(null, userObj.formatResponse(userObj.dataValues));
+      cb(null, user.formatResponse(user.dataValues));
     }
   });
 }
@@ -84,23 +86,19 @@ function getUser(userId, cb) {
 function updateUser(userId, data, cb) {
   return sequelize
     .query(
-      `UPDATE salesforce.account SET name='${data.name}' WHERE id=${userId}`
+      `UPDATE account SET first_name='${data.first_name}', last_name='${data.last_name}' WHERE user_id=${userId}`
     )
     .then(() => {
-      return AccountModal.findAll({ where: { id: userId } }).then((user) => {
+      AccountModal.findOne({ where: { user_id: userId } }).then((user) => {
         if (!user) {
           cb(
-            new customError({
+            new CustomError({
               custom_error: "notFound",
               message: "User not found.",
             })
           );
         } else if (user) {
-          let userObj;
-          user.map((user) => {
-            userObj = user;
-          });
-          cb(null, userObj.formatResponse(userObj.dataValues));
+          cb(null, user.formatResponse(user.dataValues));
         }
       });
     });
@@ -114,13 +112,6 @@ function updateUser(userId, data, cb) {
   //     plain: true, // makes sure that the returned instances are just plain objects
   //   }
   // )
-}
-
-function createUser(data, cb) {
-  userObj = new AccountModal(data);
-  return userObj.save().then((user) => {
-    cb(null, user.formatResponse(user.dataValues));
-  });
 }
 
 Promise.promisifyAll(module.exports);
